client/src/components/Rounds/RoundScorecard.scss
@import "../../globalSyles/variables";


$margin-mobile: 285px;
$margin-desktop: 315px;

.RoundScorecard {
  .ScorecardContainer {
    background-color: darken($text-white, 2%);
    height: calc(100vh - #{$margin-mobile} );
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 25px;
    box-shadow: -2px -2px 3px 0 inset $text-dark,
                2px 2px 3px 0 inset $text-white;
    border-radius: 10px 10px 2px 2px;
    overflow-y: scroll;
    overflow-x: auto;

    @media screen and (min-width: $screen-l) {
      height: calc(100vh - #{$margin-desktop} );
    }
  }

  .Scorecard {
    margin: auto;
    background: #FFF;
    border: 1px solid $text-dark;
    text-align: center;
    padding: 5px;
    max-width: 850px;
   
    h3 {
      display: inline-block;
      width: 47%;
    }

    .par {
      text-align: left;
    }

    .score {
      text-align: right;
    }

    table {
      max-width: 100%;
      @media screen and (min-width: $screen-s) {
        display: inline-block;
        
      }
    }

    th {
      background: $text-dark;
      color: $text-white;

      font-family: $font-stack-primary;
      font-size: 18px;
    }

    td {  
      font-family: $font-stack-links;
      font-size: 18px;
    }

    a {
      display: block;
      text-decoration: none;
      color: inherit;
      width: 50px;
      line-height: 30px;
      min-height: 30px;
      @media screen and (min-width: $screen-s) {
        width: 75px;
        line-height: 45px;
        min-height: 45px;
      }

      .par {
        line-height: 30px;
        min-height: 30px;
        @media screen and (min-width: $screen-s) {
          line-height: 45px;
          min-height: 45px;
        }
      }

      .eagle {
        border-radius: 50%;
        background: $text-green;
        color: $text-white;
        border: 2px solid $text-green;
      }

      .birdie {
        border-radius: 50%;
        border: 2px solid $text-green;
      }

      .par {
        border: 2px solid #FFF;
      }

      .bogie {
        border: 2px solid $text-dark;
      }

      .double {
        background: $text-dark;
        border: 2px solid $text-dark;
        color: $text-white;
      }
    }
  }
}

